injection/logs/8132552.err
  File "/panfs/roc/groups/7/cough052/barna314/nmma_fitter/injection/injectionScript.py", line 28
    parser.add_argument("-n", "--n-injection",type=int, default=None,"The number of injections to generate: not required if --gps-file or injection file is also given (should be at least one for our purposes)")
                                                                    ^
SyntaxError: positional argument follows keyword argument
chmod: cannot access '/panfs/roc/groups/7/cough052/barna314/nmma_fitter/injection/LCScript': No such file or directory
